--- a/index.html
+++ b/index.html
@@ -71,24 +71,8 @@
       width: 400px;
       max-width: 90%;
       min-width: 300px;
-    }
-
-    /* Full-screen overlay for mobile play */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 2em;
-      text-align: center;
-      z-index: 10;
-      cursor: pointer;
+      opacity: 0; /* hidden initially */
+      transition: opacity 1s ease-in-out;
     }
   </style>
 </head>
@@ -102,43 +86,5 @@
   <!-- Webamp player container -->
   <div id="webamp-container"></div>
 
-  <!-- Mobile overlay -->
-  <div id="overlay">Tap to start the player 🎵</div>
-
   <!-- Webamp JS -->
-  <script src="https://cdn.jsdelivr.net/npm/webamp@3.0.0/dist/webamp.min.js"></script>
-  <script>
-    // Initialize Webamp
-    const webamp = new Webamp({
-      initialTracks: [
-        {
-          metaData: {
-            title: "A King's Fate",
-            artist: "Moonzoomusic",
-            coverUrl: "kingsfatecover.jpg"
-          },
-          url: "https://drive.google.com/uc?export=download&id=19OwVETA5ti_LHotKDGIYc3gC8IggV58e"
-        }
-      ],
-      initialSkin: null,
-    });
-
-    webamp.renderWhenReady(document.getElementById("webamp-container"));
-
-    // Mobile-friendly: start on user tap
-    const overlay = document.getElementById("overlay");
-    overlay.addEventListener("click", () => {
-      webamp.play();
-      overlay.style.display = "none"; // hide overlay
-    });
-
-    // Optional: ensure audio keeps playing in background
-    document.addEventListener("visibilitychange", () => {
-      if (document.visibilityState === "hidden") {
-        // Audio continues if already playing
-      }
-    });
-  </script>
-
-</body>
-</html>
+  <s
