--- a/index.html
+++ b/index.html
@@ -1,151 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A King's Fate</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-      width: 100%;
-      height: 100%;
-      font-family: sans-serif;
-      background-color: black;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>A King's Fate</title>
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    height: 100%;
+    background: black;
+    font-family: sans-serif;
+  }
 
-    /* Background fade + Ken Burns */
-    @keyframes fadeInBG {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+  /* Background image with Ken Burns effect */
+  #background {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('kingsfatecover.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    animation: fadeIn 5s forwards, kenBurn 20s infinite alternate;
+    z-index: -2;
+  }
 
-    @keyframes kenBurns {
-      0% { transform: scale(1) translate(0,0); }
-      25% { transform: scale(1.02) translate(-5px, 2px); }
-      50% { transform: scale(1.04) translate(3px, -4px); }
-      75% { transform: scale(1.02) translate(-2px, 3px); }
-      100% { transform: scale(1) translate(0,0); }
-    }
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
 
-    #background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("kingsfatecover.jpg");
-      background-size: cover;
-      background-position: center;
-      opacity: 0;
-      animation: fadeInBG 5s forwards, kenBurns 180s ease-in-out infinite alternate;
-      z-index: -2;
-    }
+  @keyframes kenBurn {
+    from { transform: scale(1) translate(0,0); }
+    to { transform: scale(1.05) translate(0,0); }
+  }
 
-    /* Title fade + parallax */
-    #title {
-      width: 60%;
-      max-width: 600px;
-      opacity: 0;
-      transform: translateY(0);
-      transition: opacity 2s ease-in-out, transform 180s ease-in-out;
-      z-index: 1;
-      margin-bottom: 40px;
-    }
+  /* Title graphic */
+  #title {
+    position: relative;
+    display: block;
+    max-width: 80%;
+    margin: 30px auto 20px auto;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+    z-index: 1;
+  }
 
-    /* Webamp player container */
-    #webamp-container {
-      width: 400px;
-      max-width: 90%;
-      min-width: 300px;
-      opacity: 0;
-      transform: translateY(20px);
-      margin-bottom: 40px;
-      z-index: 1;
-      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-    }
-
-    @media (max-width: 600px) {
-      #title { width: 90%; }
-      #webamp-container { width: 90%; min-width: 200px; }
-    }
-  </style>
+  /* Webamp container */
+  #webamp-container {
+    width: 80%;
+    max-width: 600px;
+    margin: 0 auto 50px auto;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 1;
+  }
+</style>
 </head>
 <body>
-  <div id="background"></div>
-  <img src="AKingsFate_Headlineshadow.png" id="title" alt="A King's Fate">
-  <div id="webamp-container"></div>
 
-  <!-- Webamp -->
-  <script src="https://cdn.jsdelivr.net/npm/webamp@3.0.1/dist/webamp.min.js"></script>
-  <script>
-    const title = document.getElementById("title");
-    const webampContainer = document.getElementById("webamp-container");
+<div id="background"></div>
+<img src="AKingsFate_Headlineshadow.png" id="title" alt="A King's Fate">
+<div id="webamp-container"></div>
 
-    // Start sequence after background fade (5s)
+<!-- Webamp JS -->
+<script src="https://cdn.jsdelivr.net/npm/webamp@3.0.1/dist/webamp.min.js"></script>
+<script>
+  const title = document.getElementById("title");
+  const webampContainer = document.getElementById("webamp-container");
+
+  // Step 1: Fade in title after 5s (background fade)
+  setTimeout(() => {
+    title.style.opacity = 1;
+
+    // Step 2: Fade in Webamp controls after title fade (2s)
     setTimeout(() => {
-      // Fade in title
-      title.style.opacity = 1;
+      webampContainer.style.opacity = 1;
 
-      // Add slight parallax along with Ken Burns
-      title.style.transform = "translateY(-10px)";
-
-      // Show Webamp controls after title fade (2s)
-      setTimeout(() => {
-        try {
-          const webamp = new Webamp({
-            initialTracks: [
-              {
-                metaData: {
-                  title: "A King's Fate",
-                  artist: "Moonzoomusic",
-                  coverUrl: "kingsfatecover.jpg"
-                },
-                url: "https://drive.google.com/uc?export=download&id=19OwVETA5ti_LHotKDGIYc3gC8IggV58e"
-              }
-            ],
-            initialSkin: null,
-            uiOptions: {
-              showMainWindow: true,
-              showPlaylist: false,
-              showEq: false,
-              showTrackInfo: false,
-              showVolume: false,
-              showVisualizer: false,
-              showTime: false,
-              showTitleBar: false
-            }
-          });
-
-          webamp.renderWhenReady(webampContainer);
-
-          // Animate Webamp container fade/slide
-          setTimeout(() => {
-            webampContainer.style.opacity = 1;
-            webampContainer.style.transform = "translateY(0)";
-          }, 200);
-
-          // Limit buttons to Play/Pause, FF, RW
-          webamp.onUIReady(() => {
-            const buttons = webampContainer.querySelectorAll(".webamp-button");
-            buttons.forEach(button => {
-              const ariaLabel = button.getAttribute("aria-label");
-              if (!["Play/Pause", "Fast Forward", "Rewind"].includes(ariaLabel)) {
-                button.style.display = "none";
-              }
-            });
-          });
-
-        } catch (e) {
-          console.error("Webamp failed to load:", e);
+      // Initialize Webamp
+      const webamp = new Webamp({
+        initialTracks: [
+          { 
+            metaData: { title: "A King's Fate" },
+            url: "kingsfate.mp3"
+          }
+        ],
+        uiOptions: {
+          showMainWindow: false,      // Hide full window
+          showPlaylistEditor: false,
+          showSkinLoader: false,
+          showEqualizer: false
         }
-      }, 2000); // after title fade
-    }, 5000); // after background fade
-  </script>
+      });
+
+      webamp.renderWhenReady(webampContainer);
+
+      // Only show minimal controls: play, pause, FF, rewind
+      // Webamp doesn’t officially let you remove other buttons,
+      // but hiding playlist / skin loader / eq helps simplify UI
+
+    }, 2000); // 2s after title fade
+  }, 5000); // 5s after background fade
+</script>
+
 </body>
 </html>
