--- a/index.html
+++ b/index.html
@@ -8,101 +8,110 @@
   html, body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    height: 100%;
+    overflow: hidden;
     background: black;
-    font-family: sans-serif;
-  }
-
-  /* Background image with Ken Burns effect */
-  #background {
-    position: fixed;
-    top: 0; left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('kingsfatecover.jpg');
-    background-size: cover;
-    background-position: center;
-    opacity: 0;
-    animation: fadeIn 5s forwards, kenBurn 20s infinite alternate;
-    z-index: -2;
   }
 
-  @keyframes fadeIn {
+  #background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('kingsfatecover.jpg') no-repeat center center;
+    background-size: cover;
+    opacity: 0;
+    animation: fadeInBackground 5s forwards, kenBurns 60s infinite alternate;
+  }
+
+  @keyframes fadeInBackground {
     to { opacity: 1; }
   }
 
-  @keyframes kenBurn {
-    from { transform: scale(1) translate(0,0); }
-    to { transform: scale(1.05) translate(0,0); }
+  @keyframes kenBurns {
+    0% { transform: scale(1) translate(0,0); }
+    100% { transform: scale(1.1) translate(-5px, -5px); }
   }
 
-  /* Title graphic */
   #title {
-    position: relative;
-    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 80%;
-    margin: 30px auto 20px auto;
     opacity: 0;
-    transition: opacity 2s ease-in-out;
-    z-index: 1;
+    animation: fadeInTitle 2s forwards;
+    animation-delay: 5s;
   }
 
-  /* Webamp container */
-  #webamp-container {
+  @keyframes fadeInTitle {
+    to { opacity: 1; }
+  }
+
+  #playerContainer {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 80%;
-    max-width: 600px;
-    margin: 0 auto 50px auto;
+    max-width: 400px;
     opacity: 0;
-    transition: opacity 1s ease-in-out;
-    z-index: 1;
+    animation: fadeInPlayer 1s forwards;
+    animation-delay: 7s;
+  }
+
+  @keyframes fadeInPlayer {
+    to { opacity: 1; }
+  }
+
+  /* Make the player scale on small screens */
+  .webamp-container {
+    width: 100% !important;
   }
 </style>
 </head>
 <body>
 
 <div id="background"></div>
-<img src="AKingsFate_Headlineshadow.png" id="title" alt="A King's Fate">
-<div id="webamp-container"></div>
+<img id="title" src="AKingsFate_Headlineshadow.png" alt="A King's Fate">
 
-<!-- Webamp JS -->
-<script src="https://cdn.jsdelivr.net/npm/webamp@3.0.1/dist/webamp.min.js"></script>
+<div id="playerContainer">
+  <div id="webamp"></div>
+</div>
+
+<!-- Webamp JS & CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/webamp@3.0.3/dist/webamp.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/webamp@3.0.3/dist/webamp.min.js"></script>
+
 <script>
-  const title = document.getElementById("title");
-  const webampContainer = document.getElementById("webamp-container");
+  document.addEventListener('DOMContentLoaded', () => {
+    const webamp = new Webamp({
+      initialTracks: [
+        {
+          metaData: {
+            title: "A King's Fate",
+            artist: "Moonzoom Music"
+          },
+          url: "https://docs.google.com/uc?export=download&id=19OwVETA5ti_LHotKDGIYc3gC8IggV58e"
+        }
+      ],
+      initialSkin: null, // default classic skin
+      noWebampWindow: true, // embed in container
+      initialTracksStartPlaying: false
+    });
 
-  // Step 1: Fade in title after 5s (background fade)
-  setTimeout(() => {
-    title.style.opacity = 1;
-
-    // Step 2: Fade in Webamp controls after title fade (2s)
-    setTimeout(() => {
-      webampContainer.style.opacity = 1;
-
-      // Initialize Webamp
-      const webamp = new Webamp({
-        initialTracks: [
-          { 
-            metaData: { title: "A King's Fate" },
-            url: "kingsfate.mp3"
-          }
-        ],
-        uiOptions: {
-          showMainWindow: false,      // Hide full window
-          showPlaylistEditor: false,
-          showSkinLoader: false,
-          showEqualizer: false
+    webamp.renderWhenReady(document.getElementById('webamp')).then(() => {
+      // Remove unwanted controls
+      const playerUI = document.getElementById('webamp');
+      const controls = playerUI.querySelectorAll('.control');
+      controls.forEach(control => {
+        const keep = ["play", "pause", "fastForward", "rewind"];
+        if (!keep.includes(control.dataset.command)) {
+          control.style.display = "none";
         }
       });
-
-      webamp.renderWhenReady(webampContainer);
-
-      // Only show minimal controls: play, pause, FF, rewind
-      // Webamp doesn’t officially let you remove other buttons,
-      // but hiding playlist / skin loader / eq helps simplify UI
-
-    }, 2000); // 2s after title fade
-  }, 5000); // 5s after background fade
+    });
+  });
 </script>
 
 </body>
